force-app/main/default/objects/SalesManagement__c/SalesManagement__c.object-meta.xml
<CustomObject>
    <description>山本</description>
    <label>営業管理</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>営業管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>