force-app/main/default/objects/SalesManagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>営業管理 (取引先)</relationshipLabel>
    <relationshipName>SalesManagement_Account</relationshipName>
    <type>Lookup</type>
</CustomField>