force-app/main/default/objects/SalesManagement__c/fields/AccountSegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSegment__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.AccountSegment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先セグメント</label>
    <type>Text</type>
</CustomField>