force-app/main/default/objects/SalesManagement__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.AccountType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先種別</label>
    <type>Text</type>
</CustomField>