force-app/main/default/objects/SalesManagement__c/fields/Advance_notice__c.field-meta.xml
<CustomField>
    <fullName>Advance_notice__c</fullName>
    <description>与儀</description>
    <label>事前連絡</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>