force-app/main/default/objects/SalesManagement__c/fields/AfterDocumentsShipmentDay__c.field-meta.xml
<CustomField>
    <fullName>AfterDocumentsShipmentDay__c</fullName>
    <description>与儀</description>
    <label>後処理発送日</label>
    <type>Date</type>
</CustomField>