force-app/main/default/objects/SalesManagement__c/fields/All_History__c.field-meta.xml
<CustomField>
    <fullName>All_History__c</fullName>
    <label>全般経緯</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>