force-app/main/default/objects/SalesManagement__c/fields/Amount_of_sale_amount__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_sale_amount__c</fullName>
    <description>売契情報</description>
    <label>支払合計（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>