force-app/main/default/objects/SalesManagement__c/fields/automobile_tax_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>automobile_tax_payment_amount__c</fullName>
    <description>【DWH連携項目】</description>
    <label>自動車税納付金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>