force-app/main/default/objects/SalesManagement__c/fields/automobile_tax_payment_completion_date__c.field-meta.xml
<CustomField>
    <fullName>automobile_tax_payment_completion_date__c</fullName>
    <description>【DWH連携項目】</description>
    <label>自動車税納付完了日</label>
    <type>Date</type>
</CustomField>