force-app/main/default/objects/SalesManagement__c/fields/automobile_tax_payment_detail__c.field-meta.xml
<CustomField>
    <fullName>automobile_tax_payment_detail__c</fullName>
    <description>【DWH連携項目】</description>
    <label>自動車税納付_詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>