force-app/main/default/objects/SalesManagement__c/fields/automobile_tax_refund_processing_complet__c.field-meta.xml
<CustomField>
    <fullName>automobile_tax_refund_processing_complet__c</fullName>
    <label>自動車税_返金対応完了日</label>
    <type>Date</type>
</CustomField>