force-app/main/default/objects/SalesManagement__c/fields/Automobiletaxrefund__c.field-meta.xml
<CustomField>
    <fullName>Automobiletaxrefund__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.Automobiletaxrefund__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動車税還付</label>
    <type>Text</type>
</CustomField>