force-app/main/default/objects/SalesManagement__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <label>BC区分</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestination__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bプラス</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>