force-app/main/default/objects/SalesManagement__c/fields/BringinginYard__c.field-meta.xml
<CustomField>
    <fullName>BringinginYard__c</fullName>
    <formula>PurchaseOpportunity__r.BringinginYard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入予定ヤード</label>
    <type>Text</type>
</CustomField>