force-app/main/default/objects/SalesManagement__c/fields/BugContent_formula__c.field-meta.xml
<CustomField>
    <fullName>BugContent_formula__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.BugContent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>不具合内容</label>
    <type>Text</type>
</CustomField>