force-app/main/default/objects/SalesManagement__c/fields/ByRecyclingFee__c.field-meta.xml
<CustomField>
    <fullName>ByRecyclingFee__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.ByRecyclingFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リサイクル料金別</label>
    <type>Checkbox</type>
</CustomField>