force-app/main/default/objects/SalesManagement__c/fields/Called__c.field-meta.xml
<CustomField>
    <fullName>Called__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.Called__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引取業者電話連絡済み</label>
    <type>Checkbox</type>
</CustomField>