force-app/main/default/objects/SalesManagement__c/fields/CarForm__c.field-meta.xml
<CustomField>
    <fullName>CarForm__c</fullName>
    <description>山本</description>
    <formula>TEXT(  PurchaseOpportunity__r.CarForm__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車輌形状</label>
    <type>Text</type>
</CustomField>