force-app/main/default/objects/SalesManagement__c/fields/CarryDate__c.field-meta.xml
<CustomField>
    <fullName>CarryDate__c</fullName>
    <description>与儀</description>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>