force-app/main/default/objects/SalesManagement__c/fields/CarSize__c.field-meta.xml
<CustomField>
    <fullName>CarSize__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.CarSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車輌サイズ</label>
    <type>Text</type>
</CustomField>