force-app/main/default/objects/SalesManagement__c/fields/CarTax_Excluded__c.field-meta.xml
<CustomField>
    <fullName>CarTax_Excluded__c</fullName>
    <formula>PurchaseOpportunity__r.CarTax_Excluded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動車税相当額別</label>
    <type>Checkbox</type>
</CustomField>