force-app/main/default/objects/SalesManagement__c/fields/changedtime__c.field-meta.xml
<CustomField>
    <fullName>changedtime__c</fullName>
    <description>松坂</description>
    <label>未手配になった日時</label>
    <type>DateTime</type>
</CustomField>