force-app/main/default/objects/SalesManagement__c/fields/CharteredCarSlip__c.field-meta.xml
<CustomField>
    <fullName>CharteredCarSlip__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.CharteredCarSlip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ゼロ受注番号</label>
    <type>Text</type>
</CustomField>