force-app/main/default/objects/SalesManagement__c/fields/chk_tounen_nfs__c.field-meta.xml
<CustomField>
    <fullName>chk_tounen_nfs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>【DWH連携項目】</description>
    <label>当年度納付書</label>
    <type>Checkbox</type>
</CustomField>