force-app/main/default/objects/SalesManagement__c/fields/Collected_by_mail__c.field-meta.xml
<CustomField>
    <fullName>Collected_by_mail__c</fullName>
    <description>山本</description>
    <label>郵送回収</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車検証</fullName>
            </value>
            <value>
                <fullName>登録識別情報等通知書</fullName>
            </value>
            <value>
                <fullName>自賠責保険証</fullName>
            </value>
            <value>
                <fullName>リサイクル券</fullName>
            </value>
            <value>
                <fullName>ナンバープレート</fullName>
            </value>
            <value>
                <fullName>印鑑登録証明書（所有者）</fullName>
            </value>
            <value>
                <fullName>委任状</fullName>
            </value>
            <value>
                <fullName>譲渡証明書</fullName>
            </value>
            <value>
                <fullName>住民票</fullName>
            </value>
            <value>
                <fullName>戸籍の附票</fullName>
            </value>
            <value>
                <fullName>戸籍謄本</fullName>
            </value>
            <value>
                <fullName>還付委任状</fullName>
            </value>
            <value>
                <fullName>理由書</fullName>
            </value>
            <value>
                <fullName>所有権解除依頼書</fullName>
            </value>
            <value>
                <fullName>残債確認依頼書</fullName>
            </value>
            <value>
                <fullName>納税証明書</fullName>
            </value>
            <value>
                <fullName>印鑑登録証明書（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>委任状（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>譲渡証明書（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>履歴事項証明書（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>申請依頼書（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>承諾書（所有権元発行）</fullName>
            </value>
            <value>
                <fullName>遺産分割協議書</fullName>
            </value>
            <value>
                <fullName>遺産分割協議成立申立書</fullName>
            </value>
            <value>
                <fullName>改正原戸籍</fullName>
            </value>
            <value>
                <fullName>未成年同意書</fullName>
            </value>
            <value>
                <fullName>印鑑登録証明書（親権者）</fullName>
            </value>
            <value>
                <fullName>連絡書</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>