force-app/main/default/objects/SalesManagement__c/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <label>書類揃い予定日</label>
    <type>Date</type>
</CustomField>