force-app/main/default/objects/SalesManagement__c/fields/Compensation_liability__c.field-meta.xml
<CustomField>
    <fullName>Compensation_liability__c</fullName>
    <description>山本</description>
    <label>自賠責区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>原本返却</fullName>
            </value>
            <value>
                <fullName>期限内返却</fullName>
            </value>
            <value>
                <fullName>はなまる解約（返金あり）</fullName>
            </value>
            <value>
                <fullName>はなまる解約（返金なし）</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>名変　回収必須</fullName>
            </value>
            <value>
                <fullName>名変　新規加入</fullName>
            </value>
            <value>
                <fullName>はなまる解約</fullName>
                <isActive>false</isActive>
                <label>はなまる解約</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>