force-app/main/default/objects/SalesManagement__c/fields/Compensation_liability_return__c.field-meta.xml
<CustomField>
    <fullName>Compensation_liability_return__c</fullName>
    <description>自賠区分が原本返却/期限内返却の場合のみ要。山本</description>
    <label>自賠返送対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不要</fullName>
                <default>true</default>
                <label>不要</label>
            </value>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>台帳記載済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>