force-app/main/default/objects/SalesManagement__c/fields/completed_contract__c.field-meta.xml
<CustomField>
    <fullName>completed_contract__c</fullName>
    <description>取付日が入力されていればtrueを返す。
・営業管理のLightningレコードページで「法務課チェック」の関連レコードコンポーネントを表示する為に使用
・買取商談のLightningレコードページで「売契情報」のタブを非表示にする為に使用</description>
    <formula>NOT(ISNULL( ContractPrepareDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売契取付済</label>
    <type>Checkbox</type>
</CustomField>