force-app/main/default/objects/SalesManagement__c/fields/CompletionDateFormula__c.field-meta.xml
<CustomField>
    <fullName>CompletionDateFormula__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.CompletionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>全完了日(数式)</label>
    <type>Date</type>
</CustomField>