force-app/main/default/objects/SalesManagement__c/fields/Conclusion_date__c.field-meta.xml
<CustomField>
    <fullName>Conclusion_date__c</fullName>
    <description>山本</description>
    <inlineHelpText>はなまる売契は締結日・注文書や相手方売契は管理で確認できた日を入れています</inlineHelpText>
    <label>売契・注文書の確認日</label>
    <type>Date</type>
</CustomField>