force-app/main/default/objects/SalesManagement__c/fields/Contact_SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>Contact_SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>営業管理</relationshipLabel>
    <relationshipName>Contact_SalesManagement</relationshipName>
    <type>Lookup</type>
</CustomField>