force-app/main/default/objects/SalesManagement__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>山本</description>
    <label>売買契約書種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>紙：はなまる売契</fullName>
            </value>
            <value>
                <fullName>紙：相手方注文書</fullName>
            </value>
            <value>
                <fullName>電子：はなまる売契</fullName>
            </value>
            <value>
                <fullName>電子：相手方注文書</fullName>
            </value>
            <value>
                <fullName>FAX：はなまる売契</fullName>
            </value>
            <value>
                <fullName>売契不要</fullName>
            </value>
            <value>
                <fullName>はなまる電子売契</fullName>
                <isActive>false</isActive>
                <label>はなまる電子売契</label>
            </value>
            <value>
                <fullName>先方から届く</fullName>
                <isActive>false</isActive>
                <label>先方から届く</label>
            </value>
            <value>
                <fullName>紙売契発送必要</fullName>
                <isActive>false</isActive>
                <label>紙売契発送必要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>