force-app/main/default/objects/SalesManagement__c/fields/Contract_timing__c.field-meta.xml
<CustomField>
    <fullName>Contract_timing__c</fullName>
    <description>山本</description>
    <label>売契発送タイミング</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>引取前</fullName>
            </value>
            <value>
                <fullName>引取後</fullName>
            </value>
            <value>
                <fullName>手続き書類到着前</fullName>
            </value>
            <value>
                <fullName>手続き書類到着後</fullName>
            </value>
            <value>
                <fullName>車両代振込前</fullName>
            </value>
            <value>
                <fullName>車両代振込後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>