force-app/main/default/objects/SalesManagement__c/fields/ContractCompany__c.field-meta.xml
<CustomField>
    <fullName>ContractCompany__c</fullName>
    <label>取引先名（甲）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>