force-app/main/default/objects/SalesManagement__c/fields/ContractPrepareDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPrepareDate__c</fullName>
    <label>はなまる売契取付日</label>
    <type>Date</type>
</CustomField>