force-app/main/default/objects/SalesManagement__c/fields/count_management_pickup__c.field-meta.xml
<CustomField>
    <fullName>count_management_pickup__c</fullName>
    <description>分析用</description>
    <formula>IF(ISPICKVAL( Prior_contact__c , &quot;管理課&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>管理課引取カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>