force-app/main/default/objects/SalesManagement__c/fields/count_sales_doc_setup__c.field-meta.xml
<CustomField>
    <fullName>count_sales_doc_setup__c</fullName>
    <description>分析用</description>
    <formula>IF(ISPICKVAL( Document_set_up__c , &quot;営業&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業書類取付カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>