force-app/main/default/objects/SalesManagement__c/fields/count_usedcar_dept__c.field-meta.xml
<CustomField>
    <fullName>count_usedcar_dept__c</fullName>
    <description>分析用</description>
    <formula>IF( AccountSegment__c = &quot;ディーラー中古車部&quot;, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>中古車部カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>