force-app/main/default/objects/SalesManagement__c/fields/CreateDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateDateTime__c</fullName>
    <description>山本</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日時</label>
    <type>DateTime</type>
</CustomField>