force-app/main/default/objects/SalesManagement__c/fields/Crown_water__c.field-meta.xml
<CustomField>
    <fullName>Crown_water__c</fullName>
    <description>売契情報</description>
    <label>冠水歴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>