force-app/main/default/objects/SalesManagement__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <description>売契情報</description>
    <label>不具合</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>事故車</fullName>
            </value>
            <value>
                <fullName>故障車</fullName>
            </value>
            <value>
                <fullName>水害車</fullName>
                <isActive>false</isActive>
                <label>水害車</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>