force-app/main/default/objects/SalesManagement__c/fields/Delivery_method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_method__c</fullName>
    <description>与儀</description>
    <label>搬入方法（不要）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社</fullName>
            </value>
            <value>
                <fullName>ゼロ</fullName>
            </value>
            <value>
                <fullName>テイクオフ</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>自社自走</fullName>
            </value>
            <value>
                <fullName>外注（レッカー含む）</fullName>
            </value>
            <value>
                <fullName>提携業者（B/C）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>