force-app/main/default/objects/SalesManagement__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <label>送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>郵送（レターパック）</fullName>
            </value>
            <value>
                <fullName>営業手渡し済み</fullName>
            </value>
            <value>
                <fullName>GMOサイン（メール）</fullName>
            </value>
            <value>
                <fullName>GMOサイン（SMS）</fullName>
            </value>
            <value>
                <fullName>Freeeサイン</fullName>
                <isActive>false</isActive>
                <label>Freeeサイン</label>
            </value>
            <value>
                <fullName>郵送（封筒）</fullName>
                <isActive>false</isActive>
                <label>郵送（封筒）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>