force-app/main/default/objects/SalesManagement__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.Destination_classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行先区分</label>
    <type>Text</type>
</CustomField>