force-app/main/default/objects/SalesManagement__c/fields/destination_address__c.field-meta.xml
<CustomField>
    <fullName>destination_address__c</fullName>
    <formula>destination_postal_code__c &amp; BR() &amp;
destination_country__c &amp; &quot; &quot; &amp;
destination_prefecture__c &amp; &quot; &quot; &amp;
destination_city__c &amp; BR() &amp;
destination_town__c</formula>
    <label>送付先住所</label>
    <type>Text</type>
</CustomField>