force-app/main/default/objects/SalesManagement__c/fields/destination_city__c.field-meta.xml
<CustomField>
    <fullName>destination_city__c</fullName>
    <label>送付先_市区郡</label>
    <length>20</length>
    <type>Text</type>
</CustomField>