force-app/main/default/objects/SalesManagement__c/fields/destination_country__c.field-meta.xml
<CustomField>
    <fullName>destination_country__c</fullName>
    <label>送付先_国</label>
    <length>50</length>
    <type>Text</type>
</CustomField>