force-app/main/default/objects/SalesManagement__c/fields/destination_email__c.field-meta.xml
<CustomField>
    <fullName>destination_email__c</fullName>
    <label>送付先メールアドレス</label>
    <type>Email</type>
</CustomField>