force-app/main/default/objects/SalesManagement__c/fields/destination_fax__c.field-meta.xml
<CustomField>
    <fullName>destination_fax__c</fullName>
    <label>送付先FAX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>