force-app/main/default/objects/SalesManagement__c/fields/destination_other__c.field-meta.xml
<CustomField>
    <fullName>destination_other__c</fullName>
    <label>送付先その他</label>
    <length>50</length>
    <type>Text</type>
</CustomField>