force-app/main/default/objects/SalesManagement__c/fields/destination_postal_code__c.field-meta.xml
<CustomField>
    <fullName>destination_postal_code__c</fullName>
    <label>送付先_郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>