force-app/main/default/objects/SalesManagement__c/fields/destination_prefecture__c.field-meta.xml
<CustomField>
    <fullName>destination_prefecture__c</fullName>
    <label>送付先_都道府県</label>
    <length>20</length>
    <type>Text</type>
</CustomField>