force-app/main/default/objects/SalesManagement__c/fields/destination_sms__c.field-meta.xml
<CustomField>
    <fullName>destination_sms__c</fullName>
    <label>SMS用電話番号</label>
    <type>Phone</type>
</CustomField>