force-app/main/default/objects/SalesManagement__c/fields/destination_town__c.field-meta.xml
<CustomField>
    <fullName>destination_town__c</fullName>
    <label>送付先_町名・番地</label>
    <length>50</length>
    <type>Text</type>
</CustomField>