force-app/main/default/objects/SalesManagement__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>指示書作成</label>
    <type>Checkbox</type>
</CustomField>