force-app/main/default/objects/SalesManagement__c/fields/dis_volume__c.field-meta.xml
<CustomField>
    <fullName>dis_volume__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.dis_volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>排気量</label>
    <type>Text</type>
</CustomField>