force-app/main/default/objects/SalesManagement__c/fields/DocSetUp_all_history__c.field-meta.xml
<CustomField>
    <fullName>DocSetUp_all_history__c</fullName>
    <label>書類経緯</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>